update .build.yml to use -mod=vendor for tests and building

--- a/.build.yml
+++ b/.build.yml
@@ -6,10 +6,10 @@ packages:
 tasks:
   - tests: |
       pushd emailer
-      go test ./...
+      go test -mod=vendor -v ./...
       popd
   - build: |
       pushd emailer
-      go build ./cmd/...
+      go build -mod=vendor ./cmd/...
       ./emailer -h
       popd
