update .build.yml to build for linux, windows, mac

--- a/.build.yml
+++ b/.build.yml
@@ -13,3 +13,9 @@ tasks:
       go build -mod=vendor ./cmd/...
       ./emailer -h
       popd
+  - artifacts: |
+      pushd emailer
+      GOOS=linux go build -mod=vendor ./cmd/...
+      GOOS=windows go build -mod=vendor ./cmd/...
+      GOOS=darwin go build -mod=vendor -o emailer.darwin ./cmd/...
+      popd
