fix golangci-lint suggestions, add to ci build

--- a/.build.yml
+++ b/.build.yml
@@ -3,10 +3,15 @@ secrets:
   - 63b447f7-4014-430a-b42c-455950b2a07c
 packages:
   - nixos.go
+  - nixos.golangci-lint
 tasks:
   - tests: |
       pushd emailer
       go test -mod=vendor -v ./...
+      popd
+  - lint: |
+      pushd emailer
+      golangci-lint run
       popd
   - build: |
       pushd emailer
