--- a/.build.yml
+++ b/.build.yml
@@ -23,4 +23,5 @@ tasks:
       GOOS=linux go build -mod=vendor ./cmd/...
       GOOS=windows go build -mod=vendor ./cmd/...
       GOOS=darwin go build -mod=vendor -o emailer.darwin ./cmd/...
+      hut git artifact upload emailer emailer.exe emailer.darwin
       popd
