--- a/.build.yml
+++ b/.build.yml
@@ -25,5 +25,5 @@ tasks:
       GOOS=linux go build -mod=vendor ./cmd/...
       GOOS=windows go build -mod=vendor ./cmd/...
       GOOS=darwin go build -mod=vendor -o emailer.darwin ./cmd/...
-      hut --config ~/.hut_config git artifact upload emailer emailer.exe emailer.darwin
+      hut --config ~/.hut_config git artifact upload emailer emailer.exe emailer.darwin || echo
       popd
